# laura-saas-agenda

./: .dockerignore  .env.example  .env.production.example  .gitignore  .vercelignore  AGENT.md  CHANGELOG.md  CLAUDE.md  DEPLOY_VERCEL.md  Dockerfile  ENV_RENDER.md  INSTRUCOES_MIGRACAO.md  README.md  RESUMO_DEPLOY.md  ajustarEtapaClientes.js  check-subscriptions.js  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  fix-subscriptions.js  generate-vapid.js  jest.config.js  package-lock.json  package.json  render.yaml  skills-lock.json  test-push.js  test_zapi.js  teste_ia.js  tsconfig.json  vercel.json  workflow1.json
ia-service/: .env.example  .gitignore  Dockerfile  pyproject.toml
ia-service/src/ia_service/: config.py  deps.py  main.py
ia-service/src/ia_service/agents/: client_agent.py  lead_agent.py
ia-service/src/ia_service/prompts/: system_client_agent.md  (+1 more)
ia-service/tests/: conftest.py  test_auto_book_regex.py  test_client_booking_confirmation.py  test_client_followup_context.py  test_client_followup_tools.py  test_client_history_window.py  test_client_pair_booking.py  test_client_tools.py  test_find_available_slots.py  test_health.py  test_lead_agent.py  test_lead_booking_stage.py  test_lead_tools.py  test_llm_provider_gate.py  test_period_of_day.py  test_process_lead_skeleton.py  test_prompt_renderer.py  test_team_reply.py  test_tenant_knowledge.py  test_transcribe.py
ia-service/tests/evals/: README.md  conversation_simulator.py  evaluators.py  run_eval.py  scenarios.json  target.py
ia-service/tests/fixtures/: evolution_payload.json
(+869 files in other folders)
